tests/ui/traits/next-solver/find-param-recursion-issue-152716.stderr
error[E0275]: overflow evaluating the requirement `(): Trait<<T as Proj<'static>>::Assoc>`
  --> $DIR/find-param-recursion-issue-152716.rs:16:9
   |
LL |     (): Trait<<T as Proj<'static>>::Assoc>
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`find_param_recursion_issue_152716`)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
